fixed: extra spacing to the right of page

--- a/src/App.css
+++ b/src/App.css
@@ -306,10 +306,6 @@ div.cal-background-grid.last-col.last-row {
     display: inline-flex;
 }
 
-/* custom scrollbar */
-::-webkit-scrollbar {
-    width: 20px;
-}
 
 ::-webkit-scrollbar-track {
     background-color: transparent;
